# csv_translator

./: Dockerfile  README.md  pyproject.toml
csv_translator/: main.py  ui.py
csv_translator/components/: sidebar.py
csv_translator/core/: translation.py
